Bug 334154 - changing the tables from classic to DZ and back let the icons be the smaller ones
Summary: changing the tables from classic to DZ and back let the icons be the smaller ...
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.01
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-30 19:44 UTC by Toralf Förster
Modified: 2014-12-17 21:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toralf Förster 2014-04-30 19:44:34 UTC
choosing "DZ Periodic table" reduces the icon size, and KAlzium will stay at the smaller icon size even if another table is choosen.



Reproducible: Always
Comment 1 Etienne 2014-04-30 20:18:07 UTC
Hello Toralf

Thanks for the bug report. This behavior is/was actually intentional. I never found the automatic resizing after the animation pleasing. So the window gets bigger bevore the animation and then stays the same size after. To refocos the periodic system, click anywhere on the canvas. 

In my opinion the animation should also include the resizeing of the  periodic system.
However, I never got around to fixing that.

Regards
Etienne
Comment 2 Toralf Förster 2014-08-31 20:45:16 UTC
(In reply to Etienne from comment #1)
> To refocos the periodic system, click anywhere on the canvas. 
Maybe just animate/fake that click as a work around ? ;)
Comment 3 Etienne 2014-12-17 21:29:57 UTC
Git commit 540c99ff139d3142f84f2267738b9bfdc70ffe80 by Etienne Rebetez.
Committed on 17/12/2014 at 21:28.
Pushed by erebetez into branch 'master'.

Resize the scene after the animation.

Thanks to Shalin Shah for fixing this.
REVIEW:121571

M  +3    -0    src/psetable/periodictableview.cpp
M  +1    -0    src/psetable/periodictableview.h

http://commits.kde.org/kalzium/540c99ff139d3142f84f2267738b9bfdc70ffe80