Resize the scene after the animation.

Thanks to Shalin Shah for fixing this.

BUG:334154
REVIEW:121571